# au_gis

./: README.md  pyproject.toml
etl/: run.sh  setup.sh
etl/gnaf/: copy_sql.py  drop_tables.sql  get.sh  gnaf_transforms.sql  run.sh
etl/meshblocks/: get.sh  run.sh  tables.sql
