[project]
name = "au-gis"
version = "0.1.0"
description = "Geospatial objects for Australia"
authors = [
    {name = "Tom Lockwood"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
